@@ -162,8 +162,8 @@ file descriptor in order for it to be valid in the receiving process."))
   (:documentation "Connects SOCKET to ADDRESS. For INTERNET sockets you can specify
 the port to connect to using keyword argument PORT. The default value of PORT is 0,
 which usually means letting the OS choose a random port to connect to.
-For INTERNET sockets, if WAIT is true and a connection cannot be established within
-TIMEOUT seconds signal IOMUX:POLL-TIMEOUT, but it works only with non-blocking sockets."))
+WAIT specifies how long to wait for a connection: NIL means \"return immediately\", a non-negative real
+specifies a timeout in seconds and T means \"wait forever\"."))
 
 (defgeneric socket-connected-p (socket)
   (:documentation "Returns a boolean specifying whether or not SOCKET is connected."))
