@@ -8,6 +8,7 @@
   :TYPE synonim of :LOCAL
 - IOLIB.SOCKETS:ACCEPT-CONNECTION : keyword arg TIMEOUT has been coalesced
   into WAIT
+- IOLIB.SOCKETS:CONNECT : keyword arg TIMEOUT has been coalesced into WAIT
 ** New features
 - Add support for abstract UNIX addresses (patch by Julian Stecklina)
 - UNIX addresses are now printed as strings. Abstract addresses have a leading #\@
